# flowboard

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Dockerfile.neon  INVITATION_GUIDE.md  README.md  README_DOCKER.md  SMS_SETUP_GUIDE.md  docker-compose.neon.yml  docker-compose.yml  entrypoint.neon.sh  entrypoint.sh  main.py  pyproject.toml  requirements.txt  supervisord.conf  test_email.py  test_flowboard_email.py  test_mnotify_sms.py
.claude/: settings.local.json
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_organization_user_organization.py  0003_user_current_organization_alter_user_organization_and_more.py  0004_migrate_organization_memberships.py
flowboard/: asgi.py  dashboard.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
projects/: decorators.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_alter_sprint_status.py
static/css/: style.css
tasks/: apps.py  decorators.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_subtask_due_date_alter_subtask_status_and_more.py
templates/: base.html  home.html
templates/accounts/: join_organization.html  login.html  organization_members.html  organization_settings.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  (+1 more)
workspaces/: admin.py  decorators.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
(+37 files in other folders)
